test/bpmn/invalid/element-without-id.bpmn
<bpmn:definitions id="test">
  <bpmn:process id="elementWithoutIdTest" isExecutable="true">
    <bpmn:startEvent id="">
      <bpmn:outgoing>f1</bpmn:outgoing>
    </bpmn:startEvent>
    <bpmn:endEvent id="endEvent">
      <bpmn:incoming>f1</bpmn:incoming>
    </bpmn:endEvent>
    <bpmn:sequenceFlow id="f1" sourceRef="" targetRef="endEvent" />
  </bpmn:process>
</bpmn:definitions>
